create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2974,3 +2974,54 @@ body {
 .cid-rrigghuKJQ .card {
   padding-bottom: 1.5rem;
 }
+.cid-rriEzsUUXK {
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/1217-arduino-uno-smd-895x637.jpg");
+}
+.cid-rriEzsUUXK H1 {
+  color: #cccccc;
+}
+.cid-rriFb3RDCf {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rriFb3RDCf P {
+  color: #767676;
+}
+.cid-rriFb3RDCf H1 {
+  color: #487579;
+}
+.cid-rriFb3RDCf .mbr-text,
+.cid-rriFb3RDCf .mbr-section-btn {
+  color: #232323;
+}
+.cid-rriFQWrTCk {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-image: url("../../../assets/images/bike-drawing-2000x1500.jpg");
+}
+.cid-rriFQWrTCk .icons-media-container {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.cid-rriFQWrTCk .icons-media-container .mbr-iconfont {
+  font-size: 96px;
+  color: #ffffff;
+}
+.cid-rriFQWrTCk .icons-media-container .icon-block {
+  padding-bottom: 1rem;
+}
+.cid-rriFQWrTCk .mbr-text {
+  color: #ffffff;
+}
+.cid-rriFQWrTCk .card {
+  padding-bottom: 1.5rem;
+}
